# Al-Marjaa-Language

./: .gitignore  ADVANCED_FEATURES.md  CHANGELOG.md  CHANGELOG_JIT.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IDENTITY.md  JIT_COMPLETION_REPORT.md  Makefile  PROJECT_STRUCTURE.md  README.md  ROADMAP_COMMERCIAL.md  SECURITY.md  ai_real.py  install-lsp.sh  setup.sh
.next/dev/: prerender-manifest.json  trace
docs/: ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  COMPREHENSIVE_AUDIT_REPORT.md  COOKBOOK.md  CURRENT_STATE.md  PACKAGE_MANAGER.md  PACKAGE_MANAGER_ADVANCED.md  README.md  RESEARCH_PAPER.md  ROADMAP.md  STDLIB.md  TECHNICAL_DOCUMENTATION.md  VIBE_CODING_EVALUATION.md  VIBE_CODING_SCIENTIFIC_EVALUATION.md  VSCE_PUBLISHING_GUIDE_AR.md
docs/architecture/: jit-compiler.md  lsp.md  mobile-export.md  onnx-support.md  parallel-gc.md  ui-support.md  vibe-engine.md
docs/getting-started/: installation-packages.md  installation.md  user-guide-comprehensive.md  user-guide.md
docs/guides/: gui-development.md
docs/internals/: current-state.md
docs/language/: api-reference.md  spec.md
docs/project/: security.md
docs/reports/: practical-tests.md  test-results.md
download/: Al_Marjaa_Research_Paper_v3.tex  add_metadata.py  al_marjaa_gap_analysis.py  almarjaa_research_paper.py  generate_al_marjaa_paper.py
download/arxiv_paper/: README.md  al_marjaa_complete_paper.rm  al_marjaa_language.tex  al_marjaa_paper.rm  al_marjaa_paper_v2.rm  al_marjaa_xelatex.rm  generate_complete_paper.py  generate_final_paper.py  generate_paper.py
editors/: README.md
editors/lsp-server/: Cargo.toml  README.md  integrate.sh
editors/lsp-server/src/: arabic_support.rs  cache.rs  call_hierarchy.rs  capabilities.rs  code_actions.rs  code_lens.rs  diagnostics.rs  folding.rs  formatting.rs  handlers.rs  inlay_hints.rs  lib.rs  main.rs  rename.rs  semantic_tokens.rs  server.rs  signature_help.rs  state.rs  transport.rs  type_inference.rs  workspace_symbols.rs
editors/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package.json  tsconfig.json
examples/: advanced_data_pipeline.mrj  advanced_error_resilience.mrj  advanced_features.mrj  ai_basics.mrj  calculator.mrj  complete_test.mrj  comprehensions.mrj  conditions.mrj  context_managers.mrj  data_classes.mrj  decorators.mrj  destructuring.mrj  dictionary.mrj  enums.mrj  export_calculator.mrj  export_demo.mrj  export_todo_app.mrj  fibonacci.mrj  functions.mrj  generators.mrj  gui_calculator.mrj  hello.mrj  hmi_professional_animation.mrj  hmi_scada_advanced.mrj  industrial_automation_advanced.mrj  lists.mrj  loops.mrj  modules_example.mrj  neural_network.mrj  neural_network_simple.mrj  neural_network_training.mrj  new_features.mrj  new_functions.mrj  onnx_basics.mrj  python_comparison.mrj  quick_reference.mrj  spread.mrj  strings.mrj  training_example.mrj  type_annotations.mrj  (+10 more)
fine_tuning/: README.md
fine_tuning/data/: README.md
install/linux/: install.sh
install/macos/: install.sh
install/universal/: install.sh
install/windows/: install.ps1
models/: README.md
packaging/: Makefile
packaging/aur/: PKGBUILD
packaging/chocolatey/: almarjaa.nuspec
packaging/debian/: deb-config.toml
packaging/flatpak/: io.almarjaa.Almarjaa.metainfo.xml
packaging/homebrew/: almarjaa.rb
packaging/macos/: create-dmg.sh  entitlements.plist  package.plist
packaging/rpm/: almarjaa.spec
packaging/snap/: snapcraft.yaml
packaging/windows/: almarjaa.wxs
src/: lib.rs  main.rs
tests/: bytecode_comparison_tests.rs  cli_flags_tests.rs  cli_smoke_tests.rs  corpus_tests.rs  golden_tests.rs  integration_v3.rs  interpreter_tests.rs  lexer_tests.rs  mobile_export_tests.rs  nested_loops_test.rs  onnx_tests.rs  package_manager_tests.rs  parser_tests.rs  performance_budget_tests.rs  run_tests.sh  runtime_ui_slice_tests.rs  simple_bytecode_test.rs  unified_vibe_integration.rs
(+180 files in other folders)
