[package]
name = "almarjaa"
version = "3.2.0"
edition = "2021"
authors = ["رضوان دالي حمدوني <almarjaa.project@hotmail.com>"]
description = "لغة المرجع - لغة برمجة عربية متكاملة مع ذكاء اصطناعي ودعم ONNX ونظام واجهات متقدم"
license = "All-Rights-Reserved"
repository = "https://github.com/radhwendalyhamdouni/Al-Marjaa-Language"
readme = "README.md"
keywords = ["arabic", "programming-language", "ai", "nlp", "compiler", "onnx", "neural-network", "ui", "gui"]
categories = ["compilers", "text-processing", "internationalization", "science", "gui"]

[[bin]]
name = "almarjaa"
path = "src/main.rs"

[[bin]]
name = "almarjaa-ai"
path = "src/bin/ai_inference.rs"

[dependencies]
rustyline = "14.0"
unicode-segmentation = "1.11"
colored = "2.1"
serde_json = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
semver = "1.0"

# الذكاء الاصطناعي (اختياري)
hf-hub = { version = "0.3", features = ["tokio"], optional = true }

# معالجة GGUF (اختياري)
memmap2 = { version = "0.9", optional = true }
byteorder = { version = "1.5", optional = true }

# ONNX Runtime - دعم نماذج ONNX
ort = { version = "2.0", optional = true }
ndarray = { version = "0.15", optional = true }

# GPU والحوسبة المتوازية
wgpu = { version = "0.19", features = ["webgl"], optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
rayon = "1.10"
num_cpus = "1.16"

# أدوات إضافية
chrono = "0.4"
regex = "1.10"
dirs = "5.0"
base64 = "0.22"

# طلبات HTTP الآمنة
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }

# سطر الأوامر
clap = { version = "4.5", features = ["derive"] }

# ضغط وفك ضغط الملفات (للنماذج)
zip = { version = "0.6", optional = true }

[features]
default = ["network"]
gpu = ["wgpu", "pollster", "bytemuck"]
ai = ["hf-hub", "memmap2", "byteorder"]
onnx = ["ort", "ndarray", "zip"]
network = ["reqwest", "tokio"]
full = ["gpu", "ai", "network", "onnx"]

[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.5"
